Mejoras en la app y en el formulario 1

--- a/MEIv3/app/src/main/res/layout-v21/content_sesion.xml
+++ b/MEIv3/app/src/main/res/layout-v21/content_sesion.xml
@@ -92,158 +92,13 @@
         android:background="@android:color/white"
         android:visibility="gone">
 
-        <LinearLayout
+
+        <fragment
+            android:id="@+id/fragment3"
+            android:name="com.example.ramir.meiv3.inicio_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="5dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                app:cardElevation="2dp"
-                app:contentPadding="5dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:elevation="1dp"
-                        android:padding="6dp"
-                        tools:targetApi="lollipop">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="5dp"
-                            android:layout_toEndOf="@+id/imageView"
-                            android:text="@string/patrocinador" />
-
-                        <ImageView
-                            android:id="@+id/imageView"
-                            android:layout_width="20dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
-                            android:contentDescription="@string/contenido"
-                            app:srcCompat="@drawable/ic_info" />
-                    </RelativeLayout>
-
-                    <ImageView
-                        android:id="@+id/publicidad"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:contentDescription="@string/sponsor1"
-                        android:maxHeight="200dp"
-                        android:scaleType="fitCenter"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                app:cardElevation="2dp"
-                app:contentPadding="5dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:elevation="1dp"
-                        android:padding="6dp">
-
-                        <TextView
-                            android:id="@+id/univ_sponsor4"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="5dp"
-                            android:layout_toEndOf="@+id/imageView6"
-                            android:text="@string/universidad_de_la_semana" />
-
-                        <ImageView
-                            android:id="@+id/imageView6"
-                            android:layout_width="20dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
-                            android:contentDescription="@string/contenido"
-                            app:srcCompat="@drawable/ic_univ" />
-                    </RelativeLayout>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                app:cardElevation="2dp"
-                app:contentPadding="5dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:elevation="1dp"
-                        android:padding="6dp"
-                        tools:targetApi="lollipop">
-
-                        <TextView
-                            android:id="@+id/univ_sponsor5"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="5dp"
-                            android:layout_toEndOf="@+id/imageView5"
-                            android:text="@string/tendencias" />
-
-                        <ImageView
-                            android:id="@+id/imageView5"
-                            android:layout_width="20dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
-                            android:contentDescription="@string/contenido"
-                            app:srcCompat="@drawable/ic_trending_up_black_24dp" />
-                    </RelativeLayout>
-
-                    <WebView
-                        android:id="@+id/wb_trend"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-        </LinearLayout>
+            tools:layout="@layout/fragment_inicio" />
     </ScrollView>
 
     <ScrollView
@@ -325,121 +180,13 @@
         android:background="@android:color/white"
         android:visibility="gone">
 
-        <LinearLayout
+
+        <fragment
+            android:id="@+id/fragment"
+            android:name="com.example.ramir.meiv3.perfil_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/perfil_portada"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:contentDescription="@string/portada"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@color/red"
-                    tools:layout_editor_absoluteY="0dp" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentTop="true"
-                    android:padding="16dp">
-
-                    <ImageView
-                        android:id="@+id/perfil_foto"
-                        android:layout_width="75dp"
-                        android:layout_height="75dp"
-                        android:layout_above="@+id/perfil_usuario"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginBottom="16dp"
-                        android:contentDescription="@string/foto_de_perfil"
-                        app:srcCompat="@color/colorPrimaryDark" />
-
-                    <TextView
-                        android:id="@+id/perfil_usuario"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_above="@+id/perfil_correo"
-                        android:layout_alignParentStart="true"
-                        android:padding="2dp"
-                        android:paddingEnd="4dp"
-                        android:paddingStart="4dp"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                        android:textColor="#fff" />
-
-                    <TextView
-                        android:id="@+id/perfil_correo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentStart="true"
-                        android:padding="2dp"
-                        android:paddingEnd="4dp"
-                        android:paddingStart="4dp"
-                        android:textColor="#fff" />
-
-                </RelativeLayout>
-            </RelativeLayout>
-
-
-            <LinearLayout
-                android:id="@+id/ly_perfil"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:elevation="8dp"
-                    app:cardCornerRadius="4dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/textView20"
-                            android:layout_width="match_parent"
-                            android:layout_height="0dp"
-                            android:layout_marginEnd="10dp"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_weight="1"
-                            android:text="@string/test_realizados"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-                        <TableLayout
-                            android:id="@+id/tablaTest"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal">
-
-                            <TableRow
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:orientation="vertical">
-
-                            </TableRow>
-
-                        </TableLayout>
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
+            tools:layout="@layout/fragment_perfil" />
     </ScrollView>
 
     <ScrollView
@@ -449,151 +196,13 @@
         android:background="@android:color/white"
         android:visibility="gone">
 
-        <LinearLayout
+
+        <fragment
+            android:id="@+id/fragment2"
+            android:name="com.example.ramir.meiv3.carrera_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/univ_foto"
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:contentDescription="@string/universidad"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@color/colorPrimary"
-                    tools:layout_editor_absoluteY="0dp" />
-
-                <TextView
-                    android:id="@+id/id_carrera"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:padding="16dp"
-                    android:text="@string/carrera"
-                    android:textColor="@android:color/white"
-                    android:textSize="24sp"
-                    android:visibility="gone" />
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <TextView
-                    android:id="@+id/id_univ"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/universidad"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-                <TextView
-                    android:id="@+id/id_inst"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/institucion"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/darker_gray" />
-
-                <TextView
-                    android:id="@+id/id_area"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/area"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/id_descrip"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:lineSpacingMultiplier="1.25"
-                    android:text="@string/descripcion"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/textView13"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:text="@string/plan_de_estudios"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-                <TextView
-                    android:id="@+id/id_plan"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:lineSpacingMultiplier="1.25"
-                    android:text="@string/plan_de_estudios"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/textView16"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:text="@string/becas"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-                <TextView
-                    android:id="@+id/id_becas"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:lineSpacingMultiplier="1.25"
-                    android:text="@string/becas"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/textView15"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:text="@string/perfil_de_egreso"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-                <TextView
-                    android:id="@+id/id_perfil_egreso"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:lineSpacingMultiplier="1.25"
-                    android:text="@string/perfil_de_egreso"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/textView14"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:text="@string/intercambios"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-                <TextView
-                    android:id="@+id/id_intercambios"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:lineSpacingMultiplier="1.25"
-                    android:text="@string/intercambios"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-        </LinearLayout>
+            tools:layout="@layout/fragment_carrera" />
     </ScrollView>
 
     <ScrollView
