--- a/MEIv3/app/src/main/res/layout/fragment_regis.xml
+++ b/MEIv3/app/src/main/res/layout/fragment_regis.xml
@@ -26,159 +26,152 @@
             android:paddingRight="16dp"
             android:visibility="visible">
 
-            <TextView
-                android:id="@+id/textView5"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/webviewr"
-                android:layout_marginTop="20dp"
-                android:layout_toEndOf="@+id/webviewr"
-                android:text="Correo electrónico"
-                android:textAppearance="@style/TextAppearance.AppCompat.Button"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
 
-            <EditText
-                android:id="@+id/et_r_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:ems="10"
-                android:hint="Correo electrónico"
-                android:inputType="textEmailAddress"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textColorHint="?attr/colorControlNormal" />
+                <EditText
+                    android:id="@+id/et_r_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Correo electrónico"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                    android:textColorHint="?attr/colorControlNormal"
+                    tools:ignore="HardcodedText" />
+            </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:id="@+id/textView6"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Contraseña"
-                android:textAppearance="@style/TextAppearance.AppCompat.Button"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
 
-            <EditText
-                android:id="@+id/et_r_pass"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/et_r_email"
-                android:ems="10"
-                android:fontFamily="sans-serif"
-                android:hint="Contraseña"
-                android:inputType="textPassword"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textColorHint="?attr/colorControlNormal" />
+                <EditText
+                    android:id="@+id/et_r_pass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/et_r_email"
+                    android:ems="10"
+                    android:fontFamily="sans-serif"
+                    android:hint="Contraseña"
+                    android:inputType="textPassword"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                    android:textColorHint="?attr/colorControlNormal"
+                    tools:ignore="HardcodedText" />
+            </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:id="@+id/textView7"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Confirmar contraseña"
-                android:textAppearance="@style/TextAppearance.AppCompat.Button"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
 
-            <EditText
-                android:id="@+id/et_r_pass2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/et_r_pass"
-                android:ems="10"
-                android:fontFamily="sans-serif"
-                android:hint="Confirmar contraseña"
-                android:inputType="textPassword"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textColorHint="?attr/colorControlNormal" />
+                <EditText
+                    android:id="@+id/et_r_pass2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/et_r_pass"
+                    android:ems="10"
+                    android:fontFamily="sans-serif"
+                    android:hint="Confirmar contraseña"
+                    android:inputType="textPassword"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                    android:textColorHint="?attr/colorControlNormal"
+                    tools:ignore="HardcodedText" />
+            </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:id="@+id/textView8"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Nombre"
-                android:textAppearance="@style/TextAppearance.AppCompat.Button"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
 
-            <EditText
-                android:id="@+id/et_r_nombre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/et_r_pass2"
-                android:ems="10"
-                android:hint="Nombre"
-                android:inputType="textPersonName"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textColorHint="?attr/colorControlNormal" />
+                <EditText
+                    android:id="@+id/et_r_nombre"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/et_r_pass2"
+                    android:ems="10"
+                    android:hint="Nombre"
+                    android:inputType="textPersonName"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                    android:textColorHint="?attr/colorControlNormal"
+                    tools:ignore="HardcodedText" />
+            </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:id="@+id/textView9"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Apellidos"
-                android:textAppearance="@style/TextAppearance.AppCompat.Button"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
 
-            <EditText
-                android:id="@+id/et_r_last"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/et_r_nombre"
-                android:ems="10"
-                android:hint="Apellidos"
-                android:inputType="textPersonName"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textColorHint="?attr/colorControlNormal" />
+                <EditText
+                    android:id="@+id/et_r_last"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/et_r_nombre"
+                    android:ems="10"
+                    android:hint="Apellidos"
+                    android:inputType="textPersonName"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                    android:textColorHint="?attr/colorControlNormal"
+                    tools:ignore="HardcodedText" />
+            </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:id="@+id/textView10"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Edad"
-                android:textAppearance="@style/TextAppearance.AppCompat.Button"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
 
-            <EditText
-                android:id="@+id/et_r_edad"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/et_r_last"
-                android:ems="10"
-                android:hint="Edad"
-                android:inputType="number"
-                android:text="0"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textColorHint="?attr/colorControlNormal" />
+                <EditText
+                    android:id="@+id/et_r_edad"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/et_r_last"
+                    android:ems="10"
+                    android:hint="Edad"
+                    android:inputType="number"
+                    android:text="10"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                    android:textColorHint="?attr/colorControlNormal"
+                    tools:ignore="HardcodedText" />
+            </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:id="@+id/textView11"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Estado"
-                android:textAppearance="@style/TextAppearance.AppCompat.Button"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
 
-            <Spinner
-                android:id="@+id/et_r_lugar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/et_r_edad"
-                android:ems="10"
-                android:hint="Ciudad"
-                android:inputType="textPersonName"
-                android:paddingBottom="16dp"
-                android:paddingTop="16dp"
-                android:spinnerMode="dialog"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textColorHint="?attr/colorControlNormal" />
+                <Spinner
+                    android:id="@+id/et_r_lugar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/et_r_edad"
+                    android:ems="10"
+                    android:hint="Ciudad"
+                    android:inputType="textPersonName"
+                    android:paddingBottom="16dp"
+                    android:paddingTop="16dp"
+                    android:spinnerMode="dialog"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                    android:textColorHint="?attr/colorControlNormal"
+                    tools:ignore="HardcodedText" />
+            </android.support.design.widget.TextInputLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -192,10 +185,10 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="16dp"
                     android:backgroundTint="@color/colorPrimary"
-                    android:padding="20dp"
                     android:text="Registrarse"
                     android:textColor="@android:color/background_light"
-                    android:visibility="visible" />
+                    android:visibility="visible"
+                    tools:ignore="HardcodedText" />
             </RelativeLayout>
 
         </LinearLayout>
