--- a/MEIv3/app/src/main/res/menu/activity_sesion_drawer.xml
+++ b/MEIv3/app/src/main/res/menu/activity_sesion_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group
         android:id="@+id/sesion"
@@ -7,19 +8,27 @@
         <item
             android:id="@+id/nav_inicio"
             android:icon="@drawable/ic_home_black_24px"
-            android:title="Inicio" />
+            android:title="Inicio"
+            tools:ignore="HardcodedText" />
         <item
             android:id="@+id/nav_test"
             android:icon="@drawable/ic_test"
-            android:title="Test" />
+            android:title="Test"
+            tools:ignore="HardcodedText" />
         <item
             android:id="@+id/nav_perfil"
             android:icon="@mipmap/profile_ic"
-            android:title="Perfil" />
+            android:title="Perfil"
+            tools:ignore="HardcodedText" />
+        <!-- <item
+            android:id="@+id/nav_todas"
+            android:icon="@drawable/ic_univ"
+            android:title="Todas las carreras" /> -->
         <item
             android:id="@+id/nav_recomendaciones"
             android:icon="@drawable/ic_map_black_24px"
-            android:title="Recomendaciones" />
+            android:title="Recomendaciones"
+            tools:ignore="HardcodedText" />
     </group>
 
     <group
@@ -28,11 +37,13 @@
         <item
             android:id="@+id/nav_contacto"
             android:icon="@drawable/ic_contact"
-            android:title="Contacto" />
+            android:title="Contacto"
+            tools:ignore="HardcodedText" />
         <item
             android:id="@+id/nav_cerrarc"
             android:icon="@android:drawable/ic_menu_close_clear_cancel"
-            android:title="Cerrar sesión" />
+            android:title="Cerrar sesión"
+            tools:ignore="HardcodedText" />
     </group>
 
 </menu>
