--- a/MEIv3/app/src/main/res/values/styles.xml
+++ b/MEIv3/app/src/main/res/values/styles.xml
@@ -1,15 +1,8 @@
 <resources>
-
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
-    <style name="Button" parent="Theme.AppCompat.Light">
-        <item name="colorControlHighlight">@color/cardview_light_background</item>
-        <item name="colorButtonNormal">@color/colorPrimary</item>
     </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -19,5 +12,11 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="MySeekBar" parent="Widget.AppCompat.SeekBar">
+        <item name="android:progressBackgroundTint">#ffffff</item>
+        <item name="android:progressTint">@color/colorPrimaryDark</item>
+        <item name="android:colorControlActivated">@color/blue</item>
+    </style>
 
 </resources>
