Correccion de la APP antigua
Se adapta la WEB para que sea compatible con la nueva app

--- a/MEIv3/app/src/main/res/layout/fragment_regis.xml
+++ b/MEIv3/app/src/main/res/layout/fragment_regis.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:padding="0dp"
-    tools:context="com.example.ramir.meiv3.LoginActivity$PlaceholderFragment">
+    tools:context="com.example.ramir.meiv3.LoginActivity">
 
     <WebView
         android:id="@+id/webviewr"
