--- a/MEIv3/app/src/main/res/layout/fragment_login.xml
+++ b/MEIv3/app/src/main/res/layout/fragment_login.xml
@@ -1,21 +1,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:id="@+id/til"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:visibility="gone"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:elevation="0dp"
-    android:orientation="vertical"
-    android:visibility="gone"
-    app:layout_collapseMode="parallax"
+    android:padding="0dp"
     tools:context="com.example.ramir.meiv3.LoginActivity">
 
 
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="400dp"
         android:visibility="gone" />
 
     <ScrollView
@@ -35,14 +33,12 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/logoView"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dp"
-                    android:background="@mipmap/meilogo"
-                    android:contentDescription="@string/meilogo"
-                    android:visibility="visible" />
+                    android:contentDescription="@string/meilogo" />
             </RelativeLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -87,9 +83,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="40dp"
-                    android:layout_weight="0.18"
                     android:backgroundTint="@color/colorPrimary"
-                    android:padding="20dp"
                     android:text="@string/iniciar_sesi_n"
                     android:textColor="@android:color/background_light" />
             </RelativeLayout>
