--- a/MEINew/app/src/main/res/menu/fragment_logged_drawer.xml
+++ b/MEINew/app/src/main/res/menu/fragment_logged_drawer.xml
@@ -29,6 +29,12 @@
             android:icon="@drawable/ic_beenhere_black_24dp"
             android:title="Recomendaciones"
             tools:ignore="HardcodedText" />
+
+        <item
+            android:id="@+id/nav_favs"
+            android:icon="@drawable/ic_favorite_action"
+            android:title="Favoritos"
+            tools:ignore="HardcodedText" />
     </group>
 
     <group
