--- a/MEINew/app/src/main/res/layout/recom_card_sample.xml
+++ b/MEINew/app/src/main/res/layout/recom_card_sample.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/main_card_margin_vertical"
-    android:layout_marginStart="@dimen/main_card_margin_horizontal"
     android:layout_marginEnd="@dimen/main_card_margin_horizontal"
+    android:layout_marginStart="@dimen/main_card_margin_horizontal"
     android:layout_marginTop="@dimen/main_card_margin_vertical"
     android:foreground="?android:attr/selectableItemBackground"
-    card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
-    card_view:cardElevation="@dimen/card_recycler_elevation">
+    android:transitionName="recoCard"
+    card_view:cardCornerRadius="6dp"
+    card_view:cardElevation="3dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -23,7 +24,7 @@
             android:layout_alignParentTop="true"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:transitionName="recoImage"/>
+            android:transitionName="recoImage" />
 
         <TextView
             android:id="@+id/tv_card_main_1_title"
@@ -44,7 +45,8 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/tv_card_main1_subtitle2"
             android:layout_below="@+id/tv_card_main1_subtitle2"
-            android:text="Instituto" />
+            android:text="Instituto"
+            android:transitionName="recoInst" />
 
         <TextView
             android:id="@+id/tv_card_main1_subtitle2"
@@ -52,7 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/tv_card_main_1_title"
             android:layout_below="@+id/tv_card_main_1_title"
-            android:text="Universidad" />
+            android:text="Universidad"
+            android:transitionName="recoUni" />
 
         <Button
             android:id="@+id/btn_card_main1_action1"
@@ -75,6 +78,19 @@
             android:layout_toEndOf="@id/btn_card_main1_action1"
             android:text="UBICACION"
             android:textColor="#ffab40" />
+
+        <ImageView
+            android:id="@+id/img_main_card1_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/btn_card_main1_action2"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/btn_card_main1_action2"
+            android:layout_marginEnd="8dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:padding="12dp"
+            android:src="@drawable/ic_favorite_border" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
