Tiene todo... Menos el indice de la app

--- a/MEINew/app/src/main/res/layout/activity_test_vocacional_fragment.xml
+++ b/MEINew/app/src/main/res/layout/activity_test_vocacional_fragment.xml
@@ -32,6 +32,11 @@
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp">
 
+                    <ProgressBar
+                        android:id="@+id/testLoad"
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
 
                 <RelativeLayout
