--- a/MEINew/app/src/main/res/layout/activity_career.xml
+++ b/MEINew/app/src/main/res/layout/activity_career.xml
@@ -10,7 +10,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_scrolling"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="208dp"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -46,6 +46,7 @@
                     android:text="Titulo"
                     android:textColor="@android:color/background_light"
                     android:transitionName="recoTitle" />
+
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
@@ -56,8 +57,20 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
+
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/carrer_content" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_scrolling"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/big_activity_fab_margin"
+        android:src="@drawable/ic_favorite_border"
+        app:backgroundTint="@android:color/background_light"
+        app:elevation="3dp"
+        app:layout_anchor="@id/app_bar_scrolling"
+        app:layout_anchorGravity="bottom|end" />
 
 </android.support.design.widget.CoordinatorLayout>
