--- a/MEINew/app/src/main/res/values/colors.xml
+++ b/MEINew/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#ee0000</color>
     <color name="colorPrimaryDark">#a70003</color>
     <color name="colorAccent">#ff0000</color>
